--- a/bot/connector-rest-client/pom.xml
+++ b/bot/connector-rest-client/pom.xml
@@ -30,10 +30,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>ai.tock</groupId>
-            <artifactId>tock-shared</artifactId>
-        </dependency>
-        <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>retrofit</artifactId>
         </dependency>
@@ -89,7 +85,15 @@
         <dependency>
             <groupId>ai.tock</groupId>
             <artifactId>tock-shared</artifactId>
+            <!-- Exclude not needed pac4j dependencies from tock-shared-->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.pac4j</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+
     </dependencies>
 
 </project>
