--- a/pom.xml
+++ b/pom.xml
@@ -109,12 +109,11 @@
 
     <modules>
         <module>shared</module>
+        <module>util</module>
         <module>stt</module>
         <module>translator</module>
         <module>nlp</module>
         <module>bot</module>
-        <module>iadvize-client</module>
-        <module>aws-tools</module>
     </modules>
 
     <dependencies>
