--- a/bot/connector-twitter/pom.xml
+++ b/bot/connector-twitter/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <artifactId>tock-bot</artifactId>
         <groupId>ai.tock</groupId>
-        <version>23.3.5-SNAPSHOT</version>
+        <version>23.9.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
