--- a/nlp/entity-evaluator/entity-value/pom.xml
+++ b/nlp/entity-evaluator/entity-value/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp-entity-evaluator</artifactId>
-        <version>23.3.5-SNAPSHOT</version>
+        <version>23.9.0</version>
     </parent>
 
     <artifactId>tock-nlp-entity-value</artifactId>
