--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>ai.tock</groupId>
     <artifactId>tock-root</artifactId>
-    <version>23.3.5-SNAPSHOT</version>
+    <version>23.9.0</version>
     <packaging>pom</packaging>
     <name>Tock</name>
     <description>Tock, The Open Conversation Kit</description>
@@ -882,7 +882,7 @@
             <name>Apache License, Version 2.0</name>
             <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
             <distribution>repo</distribution>
-            <comments/>
+            <comments />
         </license>
     </licenses>
 
@@ -890,7 +890,7 @@
         <connection>scm:git:git@github.com:theopenconversationkit/tock.git</connection>
         <developerConnection>scm:git:git@github.com:theopenconversationkit/tock.git</developerConnection>
         <url>git@github.com:theopenconversationkit/tock.git</url>
-        <tag>tock-${project.version}</tag>
+        <tag>tock-23.9.0</tag>
     </scm>
     <distributionManagement>
         <snapshotRepository>
