--- a/util/iadvize-client/pom.xml
+++ b/util/iadvize-client/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-util</artifactId>
-        <version>23.3.5-SNAPSHOT</version>
+        <version>23.9.0</version>
     </parent>
     <artifactId>tock-iadvize-client</artifactId>
     <name>tock-iadvize-client</name>
