--- a/bot/storage-mongo/pom.xml
+++ b/bot/storage-mongo/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>23.9.1-SNAPSHOT</version>
+        <version>23.9.1</version>
     </parent>
 
     <artifactId>tock-bot-storage-mongo</artifactId>
