--- a/nlp/model/storage-mongo/pom.xml
+++ b/nlp/model/storage-mongo/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp-model</artifactId>
-        <version>23.9.1</version>
+        <version>23.9.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-nlp-model-storage-mongo</artifactId>
