[DERCBOT-753] Init LLM Orchestrator - maven module (python) (#276)

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,9 @@ travis
 
 #ngrok
 scripts/connector-messenger/ngrok.exe
+
+# Python
+**/requirements.txt
+
+#env
+llm/orchestrator-server/src/main/python/app/src/app/.env
