--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,7 @@
         <module>translator</module>
         <module>nlp</module>
         <module>bot</module>
+        <module>llm</module>
     </modules>
 
     <dependencies>
