--- a/llm/orchestrator-server/src/main/python/app/pyproject.toml
+++ b/llm/orchestrator-server/src/main/python/app/pyproject.toml
@@ -10,8 +10,9 @@ packages = [{include = "llm_orchestrator", from = "src"}]
 python = "^3.9"
 uvicorn = "^0.24.0"
 fastapi = "^0.104.1"
-langchain = "^0.0.335"
-
+langchain = "^0.0.345"
+openai = "^1.3.7"
+tiktoken = "^0.5.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
