[FIX - Intellij Kotlin Build] KAPT & Source directories

--- a/bot/admin/web/pom.xml
+++ b/bot/admin/web/pom.xml
@@ -44,6 +44,7 @@
   </dependencies>
 
   <build>
+    <sourceDirectory>src/main/kotlin</sourceDirectory>
     <plugins>
       <plugin>
         <groupId>pl.project13.maven</groupId>
