--- a/translator/pom.xml
+++ b/translator/pom.xml
@@ -57,4 +57,9 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <sourceDirectory>src/main/kotlin</sourceDirectory>
+    </build>
+
 </project>
