--- a/llm/orchestrator-server/src/main/python/app/pyproject.toml
+++ b/llm/orchestrator-server/src/main/python/app/pyproject.toml
@@ -8,14 +8,13 @@ packages = [{include = "llm_orchestrator", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-uvicorn = "^0.24.0"
+uvicorn = "^0.25.0"
 pydantic-settings="^2.1.0"
-fastapi = "^0.105.0"
-langchain = "^0.0.354"
-openai = "^1.3.7"
+fastapi = "^0.108.0"
+langchain = "^0.1.0"
+langchain-openai = "^0.0.2"
 tiktoken = "^0.5.2"
 opensearch-py = "^2.4.2"
-requests-aws4auth = "^1.2.3"
 path = "^16.9.0"
 colorlog = "^6.8.0"
 
