--- a/llm/orchestrator-server/src/main/python/app/pyproject.toml
+++ b/llm/orchestrator-server/src/main/python/app/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "llm_orchestrator", from = "src"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 uvicorn = "^0.25.0"
+gunicorn = "^21.2.0"
 pydantic-settings="^2.1.0"
 fastapi = "^0.108.0"
 langchain = "^0.1.0"
