--- a/llm/orchestrator-server/src/main/python/app/pyproject.toml
+++ b/llm/orchestrator-server/src/main/python/app/pyproject.toml
@@ -18,6 +18,7 @@ tiktoken = "^0.5.2"
 opensearch-py = "^2.4.2"
 path = "^16.9.0"
 colorlog = "^6.8.0"
+boto3 = "^1.34.25"
 
 
 [tool.poetry.group.dev.dependencies]
