--- a/llm/orchestrator-server/src/main/python/app/pyproject.toml
+++ b/llm/orchestrator-server/src/main/python/app/pyproject.toml
@@ -19,6 +19,7 @@ opensearch-py = "^2.4.2"
 path = "^16.9.0"
 colorlog = "^6.8.0"
 boto3 = "^1.34.25"
+urllib3 = "^1.26"
 
 
 [tool.poetry.group.dev.dependencies]
