[DERCBOT-807] Add unit testing + coverage (#294)
* Add routers, configuration and exceptions tests

* Tox config

* Add exceptions and LangChain callbacks tests

* Add RAG chain mock test (WIP)

* Test RAG chain + improve other tests

* Add tests for errors, langchain callbacks, langchain factory

* Correct two additional Sonar errors

* Add tests/code coverage details in README

* Rebase branch on develop and refactor

* Create a test dependencies group

* Test AWS secret manager (+ correct exception handling)

* Use pytest framework to test exceptions

---------

Co-authored-by: Pierre Guirriec <pierre.guirriec@partnre.com>

--- a/gen-ai/orchestrator-server/src/main/python/server/pyproject.toml
+++ b/gen-ai/orchestrator-server/src/main/python/server/pyproject.toml
@@ -26,6 +26,11 @@ urllib3 = "^1.26"
 pre-commit = "^3.5.0"
 pip-audit = "^2.7.0"
 
+[tool.poetry.group.test.dependencies]
+tox = "^4.11.4"
+coverage = "^7.4.0"
+pytest = "^7.4.4"
+
 [tool.isort]
 line_length = 79
 multi_line_output = 3
