--- a/gen-ai/orchestrator-server/src/main/python/server/pyproject.toml
+++ b/gen-ai/orchestrator-server/src/main/python/server/pyproject.toml
@@ -20,6 +20,8 @@ path = "^16.9.0"
 colorlog = "^6.8.0"
 boto3 = "^1.34.25"
 urllib3 = "^1.26"
+pytest = "^7.4.3"
+jinja2 = "^3.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
