[DERCBOT-781] Fix sonar issues (#319)
* [DERCBOT-781] Fix sonar issues

* [DERCBOT-781] review

* [DERCBOT-781] review

--- a/gen-ai/orchestrator-server/pom.xml
+++ b/gen-ai/orchestrator-server/pom.xml
@@ -52,7 +52,7 @@
                 </executions>
                 <configuration>
                     <workingDirectory>src/main/python/server/</workingDirectory>
-                    <executable>/home/Mohamed.Assoukti/.pyenv/shims/poetry</executable>
+                    <executable>poetry</executable>
                     <arguments>
                         <argument>export</argument>
                         <argument>--without-hashes</argument>
