[README] Init README.md for Tock Gen AI Orchestrator Server (#326)

--- a/gen-ai/orchestrator-server/pom.xml
+++ b/gen-ai/orchestrator-server/pom.xml
@@ -52,6 +52,11 @@
                 </executions>
                 <configuration>
                     <workingDirectory>src/main/python/server/</workingDirectory>
+                    <!--
+                        For Linux, the path to this "poetry" script must be declared :
+                        - in the PATH defined in the ~/.profile configuration file.
+                        - or in a script that launches the maven build
+                    -->
                     <executable>poetry</executable>
                     <arguments>
                         <argument>export</argument>
