[DERCBOT-852] Env and AWS CredentialsProvider (#330)
* [DERCBOT-852] Env and AWS CredentialsProvider

* [DERCBOT-852] Reviews

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
         <assertj>3.22.0</assertj>
         <byte-buddy>1.14.14</byte-buddy>
         <atrium>0.15.0</atrium>
+        <serialization>1.6.2</serialization>
 
         <plugin.surefire>3.0.0-M7</plugin.surefire>
         <plugin.source>3.2.1</plugin.source>
