--- a/util/iadvize-client/pom.xml
+++ b/util/iadvize-client/pom.xml
@@ -12,6 +12,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>ai.tock</groupId>
+            <artifactId>tock-shared</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.expediagroup</groupId>
             <artifactId>graphql-kotlin-client</artifactId>
             <version>${graphql-kotlin}</version>
