--- a/pom.xml
+++ b/pom.xml
@@ -31,30 +31,30 @@
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 
-        <kotlin>1.9.21</kotlin>
-        <coroutine>1.7.3</coroutine>
+        <kotlin>1.9.23</kotlin>
+        <coroutine>1.8.0</coroutine>
 
         <slf4j>2.0.12</slf4j>
-        <logback>1.4.14</logback>
+        <logback>1.5.3</logback>
 
         <kotlin-logging>3.0.5</kotlin-logging>
 
         <kodein>4.1.0</kodein>
         <kmongo>4.11.0</kmongo>
-        <jackson>2.16.1</jackson>
-        <jackson-databind>2.16.1</jackson-databind>
-        <jackson-module>2.16.1</jackson-module>
+        <jackson>2.17.0</jackson>
+        <jackson-databind>2.17.0</jackson-databind>
+        <jackson-module>2.17.0</jackson-module>
         <jackson-module-loader>0.4.0</jackson-module-loader>
         <jackson-data>0.4.0</jackson-data>
         <jackson-generator>0.4.0</jackson-generator>
         <klaxon>5.6</klaxon>
-        <vertx>4.5.3</vertx>
-        <retrofit>2.9.0</retrofit>
+        <vertx>4.5.7</vertx>
+        <retrofit>2.10.0</retrofit>
         <okhttp>4.12.0</okhttp>
         <okhttp-signpost>1.1.0</okhttp-signpost>
         <signpost-core>1.2.1.2</signpost-core>
         <circuitbreaker>1.7.1</circuitbreaker>
-        <guava>33.0.0-jre</guava>
+        <guava>33.1.0-jre</guava>
         <google-auth>1.35.0</google-auth>
         <google-http-client>1.44.1</google-http-client>
         <jasypt>1.9.3</jasypt>
@@ -63,23 +63,23 @@
         <emoji>5.1.1</emoji>
         <commons-codec>1.16.1</commons-codec>
         <commons-lang>3.14.0</commons-lang>
-        <commonmark>0.21.0</commonmark>
-        <json>20240205</json>
+        <commonmark>0.22.0</commonmark>
+        <json>20240303</json>
         <httpclient>4.5.14</httpclient>
         <simmetrics>4.1.1</simmetrics>
         <batik>1.12</batik>
-        <google>26.31.0</google>
-        <aws-sdk>1.12.656</aws-sdk>
+        <google>26.34.0</google>
+        <aws-sdk>1.12.689</aws-sdk>
         <pac4j>5.7.3</pac4j>
         <vertx-pac4j>6.0.2</vertx-pac4j>
         <graphql-kotlin>6.3.0</graphql-kotlin>
 
         <junit-jupiter>5.10.2</junit-jupiter>
-        <testcontainer>testcontainers</testcontainer>
+        <testcontainer>1.19.7</testcontainer>
 
-        <mockk>1.13.9</mockk>
+        <mockk>1.13.10</mockk>
         <assertj>3.22.0</assertj>
-        <byte-buddy>1.14.11</byte-buddy>
+        <byte-buddy>1.14.12</byte-buddy>
         <atrium>0.15.0</atrium>
 
         <plugin.surefire>3.0.0-M7</plugin.surefire>
