[DERCBOT-918] Gunicorn timeout and asynchronous processing (#335)
* [DERCBOT-918] Back to uvicorn instead of gunicorn, and apply asynchronous processing

* [DERCBOT-918] Reviews

* [DERCBOT-918] Reviews - Intellij run configuration

--- a/gen-ai/orchestrator-server/src/main/python/server/src/gen_ai_orchestrator/configurations/logging/config.ini
+++ b/gen-ai/orchestrator-server/src/main/python/server/src/gen_ai_orchestrator/configurations/logging/config.ini
@@ -1,5 +1,5 @@
 [loggers]
-keys=root, uvicorn, gunicorn, gen_ai_orchestrator
+keys=root, uvicorn, gen_ai_orchestrator
 
 [handlers]
 keys=console
@@ -15,12 +15,6 @@ handlers=console
 level=DEBUG
 handlers=console
 qualname=uvicorn
-propagate=0
-
-[logger_gunicorn]
-level=INFO
-handlers=console
-qualname=gunicorn
 propagate=0
 
 [logger_gen_ai_orchestrator]
