--- a/gen-ai/orchestrator-server/src/main/python/server/pyproject.toml
+++ b/gen-ai/orchestrator-server/src/main/python/server/pyproject.toml
@@ -26,6 +26,7 @@ jinja2 = "^3.1.3"
 pre-commit = "^3.5.0"
 pip-audit = "^2.7.0"
 bandit = {version = "^1.7.7", extras = ["json"]}
+cyclonedx-bom = "^4.1.4"
 
 [tool.poetry.group.test.dependencies]
 tox = "^4.11.4"
