--- a/gen-ai/orchestrator-server/src/main/python/server/pyproject.toml
+++ b/gen-ai/orchestrator-server/src/main/python/server/pyproject.toml
@@ -32,6 +32,7 @@ cyclonedx-bom = "^4.1.4"
 tox = "^4.11.4"
 coverage = "^7.4.0"
 pytest = "^7.4.4"
+pytest-asyncio = "^0.23.6"
 
 [tool.isort]
 line_length = 79
