[DERCBOT-895] Secret Key Management (#333)

--- a/gen-ai/orchestrator-core/pom.xml
+++ b/gen-ai/orchestrator-core/pom.xml
@@ -32,6 +32,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>ai.tock</groupId>
+            <artifactId>tock-aws-tools</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
