--- a/gen-ai/orchestrator-server/src/main/python/server/src/gen_ai_orchestrator/configurations/logging/config.ini
+++ b/gen-ai/orchestrator-server/src/main/python/server/src/gen_ai_orchestrator/configurations/logging/config.ini
@@ -1,5 +1,5 @@
 [loggers]
-keys=root, uvicorn, gen_ai_orchestrator
+keys=root, uvicorn, gen_ai_orchestrator, urllib3, httpx
 
 [handlers]
 keys=console
@@ -21,6 +21,18 @@ propagate=0
 level=DEBUG
 handlers=console
 qualname=gen_ai_orchestrator
+propagate=0
+
+[logger_urllib3]
+level=DEBUG
+handlers=console
+qualname=urllib3
+propagate=0
+
+[logger_httpx]
+level=DEBUG
+handlers=console
+qualname=httpx
 propagate=0
 
 [handler_console]
