[DERCBOT-941] Generate langsmith dataset from excel input (#343)
* [DERCBOT-941] Generate langsmith dataset from excel input

* [DERCBOT-941] Add input sample and README description

* [DERCBOT-941] Check if input file exists

* [DERCBOT-941] Add missing options and args in doc

* [DERCBOT-941] Check if output file can be written

* [DERCBOT-941] Upgrade langsmith

---------

Co-authored-by: Aurélien Sylvan <aurelien.sylvan@partnre.com>

--- a/gen-ai/orchestrator-server/src/main/python/tock-llm-indexing-tools/pyproject.toml
+++ b/gen-ai/orchestrator-server/src/main/python/tock-llm-indexing-tools/pyproject.toml
@@ -8,15 +8,16 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-docopt = "^0.6.2"
-pandas = "^2.1.4"
+docopt-ng = "^0.9.0"
+pandas = "^2.2.1"
+openpyxl = "^3.1.2"
 beautifulsoup4 = "^4.12.2"
 langchain = "^0.1.0"
+langsmith = "^0.1.41"
 python-dotenv = "^1.0.0"
 opensearch-py = "^2.4.2"
 gen_ai_orchestrator = {path = "../server"}
 langchain-community = "^0.0.29"
-langsmith = "^0.1.33"
 
 [build-system]
 requires = ["poetry-core"]
