[NLP-model] Add bgem3 model used by botsncv

--- a/nlp/model/pom.xml
+++ b/nlp/model/pom.xml
@@ -36,6 +36,7 @@
         <module>storage-mongo</module>
         <module>opennlp</module>
         <module>rasa</module>
+        <module>bgem3</module>
     </modules>
 
     <dependencies>
