Add a solution to the WhatsApp Cloud payload character limitation

--- a/bot/connector-whatsapp-cloud/pom.xml
+++ b/bot/connector-whatsapp-cloud/pom.xml
@@ -79,6 +79,10 @@
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.litote.kmongo</groupId>
+            <artifactId>kmongo</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
