#1601 [NLP Model] : Rename module name and classes (this module adds a new NLP provider that can delegate to any language model hosted on AWS Sagemaker) + Update Readme + Do not add bgem3 by default

--- a/nlp/model/pom.xml
+++ b/nlp/model/pom.xml
@@ -36,7 +36,7 @@
         <module>storage-mongo</module>
         <module>opennlp</module>
         <module>rasa</module>
-        <module>bgem3</module>
+        <module>sagemaker</module>
     </modules>
 
     <dependencies>
