--- a/nlp/pom.xml
+++ b/nlp/pom.xml
@@ -103,7 +103,7 @@
             </dependency>
             <dependency>
                 <groupId>ai.tock</groupId>
-                <artifactId>tock-nlp-model-bgem3</artifactId>
+                <artifactId>tock-nlp-model-sagemaker</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
