--- a/bot/engine/pom.xml
+++ b/bot/engine/pom.xml
@@ -84,6 +84,11 @@
             <artifactId>mockk-jvm</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt</artifactId>
+            <scope>test</scope>
+        </dependency>
         <!-- workaround for mockk issue see https://github.com/mockk/mockk/issues/199 -->
         <dependency>
             <groupId>io.vertx</groupId>
