Fix - unprovided maven dependencies

--- a/nlp/api/service/pom.xml
+++ b/nlp/api/service/pom.xml
@@ -46,6 +46,10 @@
             <groupId>io.vertx</groupId>
             <artifactId>vertx-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
