--- a/nlp/admin/server/pom.xml
+++ b/nlp/admin/server/pom.xml
@@ -67,6 +67,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
