--- a/nlp/model/sagemaker/pom.xml
+++ b/nlp/model/sagemaker/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>aws-query-protocol</artifactId>
             <version>${aws.version}</version>
         </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
 </project>
