[DERCBOT-1028] Add Observability Provider to Gen AI Orchestrator (#364)

--- a/gen-ai/orchestrator-server/src/main/python/server/tox.ini
+++ b/gen-ai/orchestrator-server/src/main/python/server/tox.ini
@@ -3,7 +3,7 @@ envlist = py39
 skipsdist = True
 
 [testenv]
-allowlist_externals = poetry
+allowlist_externals = poetry, coverage
 commands =
     poetry install -v
     poetry run pytest
