--- a/gen-ai/orchestrator-server/src/main/python/server/pyproject.toml
+++ b/gen-ai/orchestrator-server/src/main/python/server/pyproject.toml
@@ -20,6 +20,8 @@ colorlog = "^6.8.0"
 boto3 = "^1.34.25"
 urllib3 = "^1.26"
 jinja2 = "^3.1.3"
+langfuse = "^2.33.0"
+httpx-auth-awssigv4 = "^0.1.4"
 
 
 [tool.poetry.group.dev.dependencies]
