script for smart tribune FAQ data

--- a/gen-ai/orchestrator-server/src/main/python/tock-llm-indexing-tools/.pre-commit-config.yaml
+++ b/gen-ai/orchestrator-server/src/main/python/tock-llm-indexing-tools/.pre-commit-config.yaml
@@ -32,3 +32,7 @@ repos:
       rev: v2.3.0
       hooks:
         - id: pycln
+  - repo: https://github.com/pypa/pip-audit
+    rev: v2.7.0
+    hooks:
+      - id: pip-audit
