--- a/gen-ai/orchestrator-server/src/main/python/tock-llm-indexing-tools/pyproject.toml
+++ b/gen-ai/orchestrator-server/src/main/python/tock-llm-indexing-tools/pyproject.toml
@@ -18,6 +18,10 @@ python-dotenv = "^1.0.0"
 opensearch-py = "^2.4.2"
 gen_ai_orchestrator = {path = "../server"}
 langchain-community = "^0.0.29"
+pre-commit = "^3.7.1"
+aiometer = "^0.5.0"
+aiohttp = "^3.9.5"
+aiohttp-socks = "^0.8.4"
 
 [build-system]
 requires = ["poetry-core"]
