--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -13,21 +13,20 @@
   "private": true,
   "dependencies": {
     "@angular-slider/ngx-slider": "^2.0.4",
-    "@angular/animations": "^14.2.12",
-    "@angular/cdk": "14.2.7",
-    "@angular/common": "^14.2.12",
-    "@angular/compiler": "^14.2.12",
-    "@angular/core": "^14.2.12",
-    "@angular/forms": "^14.2.12",
-    "@angular/localize": "^14.2.12",
-    "@angular/platform-browser": "^14.2.12",
-    "@angular/platform-browser-dynamic": "^14.2.12",
-    "@angular/router": "^14.2.12",
-    "@nebular/eva-icons": "10.0.0",
-    "@nebular/theme": "10.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
+    "@angular/animations": "^15.2.10",
+    "@angular/cdk": "^15",
+    "@angular/common": "^15.2.10",
+    "@angular/compiler": "^15.2.10",
+    "@angular/core": "^15.2.10",
+    "@angular/forms": "^15.2.10",
+    "@angular/localize": "^15.2.10",
+    "@angular/platform-browser": "^15.2.10",
+    "@angular/platform-browser-dynamic": "^15.2.10",
+    "@angular/router": "^15.2.10",
+    "@nebular/eva-icons": "11.0.0",
+    "@nebular/theme": "11.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^14",
     "ang-jsoneditor": "^1.10.5",
-    "angular-google-charts": "2.2.3",
     "bootstrap": "^4.4.1",
     "cose-base": "^2.1.0",
     "cytoscape": "^3.23.0",
@@ -51,10 +50,15 @@
     "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.10",
-    "@angular/cli": "^14.2.10",
-    "@angular/compiler-cli": "^14.2.12",
-    "@angular/language-service": "^14.2.12",
+    "@angular-devkit/build-angular": "^15.2.11",
+    "@angular-eslint/builder": "^15",
+    "@angular-eslint/eslint-plugin": "^15",
+    "@angular-eslint/eslint-plugin-template": "^15",
+    "@angular-eslint/schematics": "^15",
+    "@angular-eslint/template-parser": "^15",
+    "@angular/cli": "^15.2.11",
+    "@angular/compiler-cli": "^15.2.10",
+    "@angular/language-service": "^15.2.10",
     "@types/file-saver-es": "^2.0.1",
     "@types/jasmine": "~4.3.0",
     "@types/jasminewd2": "^2.0.8",
