Upgrade zone.js to v0.13

--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -43,11 +43,11 @@
     "ngx-echarts": "^14.0.0",
     "ngx-infinite-scroll": "^8.0.2",
     "ngx-moment": "^6.0.2",
-    "papaparse": "^5.4.1",
     "normalize.css": "6.0.0",
+    "papaparse": "^5.4.1",
     "rxjs": "^7.4.0",
     "tslib": "^2.4.1",
-    "zone.js": "~0.11.8"
+    "zone.js": "^0.13.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.11",
