--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -12,36 +12,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-slider/ngx-slider": "^2.0.4",
-    "@angular/animations": "^15.2.10",
-    "@angular/cdk": "^15.2.9",
-    "@angular/common": "^15.2.10",
-    "@angular/compiler": "^15.2.10",
-    "@angular/core": "^15.2.10",
-    "@angular/forms": "^15.2.10",
-    "@angular/localize": "^15.2.10",
-    "@angular/platform-browser": "^15.2.10",
-    "@angular/platform-browser-dynamic": "^15.2.10",
-    "@angular/router": "^15.2.10",
-    "@nebular/eva-icons": "11.0.0",
-    "@nebular/theme": "11.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^14.2.0",
-    "ang-jsoneditor": "^1.10.5",
+    "@angular-slider/ngx-slider": "^16.0.1",
+    "@angular/animations": "^16.2.12",
+    "@angular/cdk": "^16.2.14",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/forms": "^16.2.12",
+    "@angular/localize": "^16.2.12",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/router": "^16.2.12",
+    "@nebular/eva-icons": "12.0.0",
+    "@nebular/theme": "12.0.0",
+    "ang-jsoneditor": "^3.1.1",
     "bootstrap": "^4.4.1",
     "cose-base": "^2.1.0",
     "cytoscape": "^3.23.0",
     "cytoscape-cola": "^2.5.1",
     "cytoscape-cose-bilkent": "^4.1.0",
     "cytoscape-dagre": "^2.5.0",
-    "echarts": "^5.3.3",
+    "echarts": "^5.5.1",
     "file-saver-es": "^2.0.5",
     "html2pdf.js": "^0.10.1",
-    "jsoneditor": "^9.5.6",
+    "jsoneditor": "^9.10.2",
     "linkify-html": "^4.1.1",
     "linkifyjs": "^4.1.1",
-    "ng2-file-upload": "^1.4.0",
-    "ngx-echarts": "^14.0.0",
-    "ngx-infinite-scroll": "^8.0.2",
+    "ng2-file-upload": "^5.0.0",
+    "ngx-echarts": "^16.2.0",
+    "ngx-infinite-scroll": "^16.0.0",
     "ngx-moment": "^6.0.2",
     "normalize.css": "6.0.0",
     "papaparse": "^5.4.1",
@@ -50,10 +49,15 @@
     "zone.js": "^0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.11",
-    "@angular/cli": "^15.2.11",
-    "@angular/compiler-cli": "^15.2.10",
-    "@angular/language-service": "^15.2.10",
+    "@angular-devkit/build-angular": "^16.2.14",
+    "@angular-eslint/builder": "^16.2.14",
+    "@angular-eslint/eslint-plugin": "^16.2.14",
+    "@angular-eslint/eslint-plugin-template": "^16.2.14",
+    "@angular-eslint/schematics": "^16.2.14",
+    "@angular-eslint/template-parser": "^16.2.14",
+    "@angular/cli": "^16.2.14",
+    "@angular/compiler-cli": "^16.2.12",
+    "@angular/language-service": "^16.2.12",
     "@types/file-saver-es": "^2.0.1",
     "@types/jasmine": "~4.3.0",
     "@types/jasminewd2": "^2.0.8",
