--- a/bot/admin/web/angular.json
+++ b/bot/admin/web/angular.json
@@ -21,7 +21,7 @@
             "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets", "src/img"],
@@ -77,14 +77,14 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "bot:build"
+            "buildTarget": "bot:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "bot:build:production"
+              "buildTarget": "bot:build:production"
             },
             "dev": {
-              "browserTarget": "bot:build:dev"
+              "buildTarget": "bot:build:dev"
             }
           },
           "defaultConfiguration": "dev"
@@ -92,7 +92,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "bot:build"
+            "buildTarget": "bot:build"
           }
         },
         "test": {
@@ -100,7 +100,7 @@
           "options": {
             "main": "src/test.ts",
             "preserveSymlinks": true,
-            "polyfills": "src/polyfills.ts",
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "styles": ["src/styles.css"],
@@ -118,9 +118,7 @@
     }
   },
   "cli": {
-    "schematicCollections": [
-      "@angular-eslint/schematics"
-    ],
+    "schematicCollections": ["@angular-eslint/schematics"],
     "analytics": false
   }
 }
