--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -12,19 +12,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-slider/ngx-slider": "^16.0.1",
-    "@angular/animations": "^16.2.12",
-    "@angular/cdk": "^16.2.14",
-    "@angular/common": "^16.2.12",
-    "@angular/compiler": "^16.2.12",
-    "@angular/core": "^16.2.12",
-    "@angular/forms": "^16.2.12",
-    "@angular/localize": "^16.2.12",
-    "@angular/platform-browser": "^16.2.12",
-    "@angular/platform-browser-dynamic": "^16.2.12",
-    "@angular/router": "^16.2.12",
-    "@nebular/eva-icons": "12.0.0",
-    "@nebular/theme": "12.0.0",
+    "@angular-slider/ngx-slider": "^17.0.2",
+    "@angular/animations": "^17.3.12",
+    "@angular/cdk": "^17.3",
+    "@angular/common": "^17.3.12",
+    "@angular/compiler": "^17.3.12",
+    "@angular/core": "^17.3.12",
+    "@angular/forms": "^17.3.12",
+    "@angular/localize": "^17.3.12",
+    "@angular/platform-browser": "^17.3.12",
+    "@angular/platform-browser-dynamic": "^17.3.12",
+    "@angular/router": "^17.3.12",
+    "@nebular/eva-icons": "13.0.0",
+    "@nebular/theme": "13.0.0",
     "ang-jsoneditor": "^3.1.1",
     "bootstrap": "^4.4.1",
     "cose-base": "^2.1.0",
@@ -38,21 +38,25 @@
     "jsoneditor": "^9.10.2",
     "linkify-html": "^4.1.1",
     "linkifyjs": "^4.1.1",
-    "ng2-file-upload": "^5.0.0",
+    "ng2-file-upload": "^6.0.0",
     "ngx-echarts": "^16.2.0",
-    "ngx-infinite-scroll": "^16.0.0",
+    "ngx-infinite-scroll": "^17.0.1",
     "ngx-moment": "^6.0.2",
-    "normalize.css": "6.0.0",
     "papaparse": "^5.4.1",
     "rxjs": "^7.4.0",
     "tslib": "^2.4.1",
     "zone.js": "^0.14"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.14",
-    "@angular/cli": "^16.2.14",
-    "@angular/compiler-cli": "^16.2.12",
-    "@angular/language-service": "^16.2.12",
+    "@angular-devkit/build-angular": "^17.3.8",
+    "@angular-eslint/builder": "^17.5.2",
+    "@angular-eslint/eslint-plugin": "^17.5.2",
+    "@angular-eslint/eslint-plugin-template": "^17.5.2",
+    "@angular-eslint/schematics": "^17.5.2",
+    "@angular-eslint/template-parser": "^17.5.2",
+    "@angular/cli": "^17.3.8",
+    "@angular/compiler-cli": "^17.3.12",
+    "@angular/language-service": "^17.3.12",
     "@types/file-saver-es": "^2.0.1",
     "@types/jasmine": "~4.3.0",
     "@types/jasminewd2": "^2.0.8",
@@ -69,6 +73,6 @@
     "karma-jasmine-html-reporter": "^2.0.0",
     "prettier": "2.6.2",
     "ts-node": "3.2.2",
-    "typescript": "5.2"
+    "typescript": "5.2.2"
   }
 }
