--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -11,10 +11,15 @@
     "mavenbuild": "ng build --configuration production"
   },
   "private": true,
+  "overrides": {
+    "@nebular/theme": {
+      "@angular/cdk": "<17.1.0"
+    }
+  },
   "dependencies": {
     "@angular-slider/ngx-slider": "^17.0.2",
     "@angular/animations": "^17.3.12",
-    "@angular/cdk": "^17.3",
+    "@angular/cdk": "<17.1.0",
     "@angular/common": "^17.3.12",
     "@angular/compiler": "^17.3.12",
     "@angular/core": "^17.3.12",
