:construction: First design draft, still a lot to cover for this design. Fixes #1707

--- a/docs/_data/tocs/en.yml
+++ b/docs/_data/tocs/en.yml
@@ -35,6 +35,10 @@ content:
         url: 'en/dev/i18n'
       - title: 'API documentation'
         url: 'en/api'
+      - title: 'Feature technical designs'
+        children:
+          - title: '#1706 Gen AI data ingestion workflow / pipeline (gitlab based)'
+            url: 'en/dev/feature-technical-designs/1706-gen-ai-data-ingestion-pipeline-gitlab'
   - title: 'About'
     children:
       - title: 'Why Tock'
