--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -30,10 +30,11 @@
     "@angular/router": "^17.3.12",
     "@nebular/eva-icons": "13.0.0",
     "@nebular/theme": "13.0.0",
+    "@types/cytoscape": "^3.21.5",
     "ang-jsoneditor": "^3.1.1",
     "bootstrap": "^4.4.1",
-    "cose-base": "^2.1.0",
-    "cytoscape": "^3.23.0",
+    "cose-base": "^2.2.0",
+    "cytoscape": "^3.30.1",
     "cytoscape-cola": "^2.5.1",
     "cytoscape-cose-bilkent": "^4.1.0",
     "cytoscape-dagre": "^2.5.0",
