--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -11,55 +11,58 @@
     "mavenbuild": "ng build --configuration production"
   },
   "private": true,
+  "overrides": {
+    "@nebular/theme": {
+      "@angular/cdk": "<17.1.0"
+    }
+  },
   "dependencies": {
-    "@angular-slider/ngx-slider": "^2.0.4",
-    "@angular/animations": "^14.2.12",
-    "@angular/cdk": "14.2.7",
-    "@angular/common": "^14.2.12",
-    "@angular/compiler": "^14.2.12",
-    "@angular/core": "^14.2.12",
-    "@angular/forms": "^14.2.12",
-    "@angular/localize": "^14.2.12",
-    "@angular/platform-browser": "^14.2.12",
-    "@angular/platform-browser-dynamic": "^14.2.12",
-    "@angular/router": "^14.2.12",
-    "@nebular/eva-icons": "10.0.0",
-    "@nebular/theme": "10.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
-    "ang-jsoneditor": "^1.10.5",
-    "angular-google-charts": "2.2.3",
+    "@angular-slider/ngx-slider": "^17.0.2",
+    "@angular/animations": "^17.3.12",
+    "@angular/cdk": "<17.1.0",
+    "@angular/common": "^17.3.12",
+    "@angular/compiler": "^17.3.12",
+    "@angular/core": "^17.3.12",
+    "@angular/forms": "^17.3.12",
+    "@angular/localize": "^17.3.12",
+    "@angular/platform-browser": "^17.3.12",
+    "@angular/platform-browser-dynamic": "^17.3.12",
+    "@angular/router": "^17.3.12",
+    "@nebular/eva-icons": "13.0.0",
+    "@nebular/theme": "13.0.0",
+    "@types/cytoscape": "^3.21.5",
+    "ang-jsoneditor": "^3.1.1",
     "bootstrap": "^4.4.1",
-    "cose-base": "^2.1.0",
-    "cytoscape": "^3.23.0",
+    "cose-base": "^2.2.0",
+    "cytoscape": "^3.30.1",
     "cytoscape-cola": "^2.5.1",
     "cytoscape-cose-bilkent": "^4.1.0",
     "cytoscape-dagre": "^2.5.0",
-    "echarts": "^5.3.3",
+    "echarts": "^5.5.1",
     "file-saver-es": "^2.0.5",
     "html2pdf.js": "^0.10.1",
-    "jsoneditor": "^9.5.6",
+    "jsoneditor": "^9.10.2",
     "linkify-html": "^4.1.1",
     "linkifyjs": "^4.1.1",
-    "ng2-file-upload": "^1.4.0",
-    "ngx-echarts": "^14.0.0",
-    "ngx-infinite-scroll": "^8.0.2",
+    "ng2-file-upload": "^6.0.0",
+    "ngx-echarts": "^16.2.0",
+    "ngx-infinite-scroll": "^17.0.1",
     "ngx-moment": "^6.0.2",
     "papaparse": "^5.4.1",
-    "normalize.css": "6.0.0",
     "rxjs": "^7.4.0",
     "tslib": "^2.4.1",
-    "zone.js": "~0.11.8"
+    "zone.js": "^0.14"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.10",
-    "@angular-eslint/builder": "14.4.0",
-    "@angular-eslint/eslint-plugin": "14.4.0",
-    "@angular-eslint/eslint-plugin-template": "14.4.0",
-    "@angular-eslint/schematics": "14.4.0",
-    "@angular-eslint/template-parser": "14.4.0",
-    "@angular/cli": "^14.2.10",
-    "@angular/compiler-cli": "^14.2.12",
-    "@angular/language-service": "^14.2.12",
+    "@angular-devkit/build-angular": "^17.3.8",
+    "@angular-eslint/builder": "^17.5.2",
+    "@angular-eslint/eslint-plugin": "^17.5.2",
+    "@angular-eslint/eslint-plugin-template": "^17.5.2",
+    "@angular-eslint/schematics": "^17.5.2",
+    "@angular-eslint/template-parser": "^17.5.2",
+    "@angular/cli": "^17.3.8",
+    "@angular/compiler-cli": "^17.3.12",
+    "@angular/language-service": "^17.3.12",
     "@types/file-saver-es": "^2.0.1",
     "@types/jasmine": "~4.3.0",
     "@types/jasminewd2": "^2.0.8",
@@ -76,6 +79,6 @@
     "karma-jasmine-html-reporter": "^2.0.0",
     "prettier": "2.6.2",
     "ts-node": "3.2.2",
-    "typescript": "4.8"
+    "typescript": "5.2.2"
   }
 }
