--- a/bot/admin/web/tsconfig.json
+++ b/bot/admin/web/tsconfig.json
@@ -12,9 +12,11 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es2020",
+    "target": "ES2022",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2020", "dom"]
+    "lib": ["es2020", "dom"],
+    "useDefineForClassFields": false,
+    "skipLibCheck": true // Temporary workaround for https://github.com/akveo/nebular/issues/3258
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
